# xssblaster

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  coverage.xml  my-xss.txt  pyproject.toml  requirements-dev.txt  setup.py  test-simple.txt  test_output.txt  xssblaster.py  xssblaster.txt
.github/: dependabot.yml
.github/workflows/: dependabot.yml  publish.yml  test.yml
tests/: test_basic.py  test_cli.py  test_core.py  test_encodings.py  test_integration.py  test_utils.py
xssblaster/: __init__.py  cli.py  core.py  utils.py
xssblaster.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
xssblaster/xssblaster/: core.py
